--- a/systemd/docs/id128.rst
+++ b/systemd/docs/id128.rst
@@ -37,3 +37,4 @@
    .. autoattribute:: systemd.id128.SD_MESSAGE_UNIT_STOPPED
    .. autoattribute:: systemd.id128.SD_MESSAGE_UNIT_STOPPING
    .. autoattribute:: systemd.id128.SD_MESSAGE_CONFIG_ERROR
+   .. autoattribute:: systemd.id128.SD_MESSAGE_BOOTCHART
